--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-pandas
 streamlit
-pdfplumber
-openai
-langchain
-python-dotenv
-os
-fitz
-re
-google.generativeai
 pymupdf
+pandas
+google-generativeai
 streamlit-lottie
